welcome.lessons.welcome.methods.slug.SlugTracking.scala.error
SlugTracking:14: error: type mismatch;
 found   : Unit
 required: Boolean
    	return true;gauche()
                          ^